# vibeleftpad

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/vibeleftpad/: __init__.py  ai.py
tests/: test_vibeleftpad.py
