[project]
name = "vibeleftpad"
version = "0.1.0"
description = "AI-powered left padding library that uses GPT to pad strings"
readme = "README.md"
authors = [
    { name = "Taha Parker", email = "tahayparker@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai", "gpt", "string", "padding", "leftpad", "parody"]
dependencies = [
    "openai>=1.95.1",
    "pydantic>=2.11.7",
    "typing-extensions>=4.14.1",
]

[project.urls]
Homepage = "https://github.com/tahayparker/vibeleftpad"
Repository = "https://github.com/tahayparker/vibeleftpad"
Issues = "https://github.com/tahayparker/vibeleftpad/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "python-dotenv>=1.0.0",
]